--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "1.6.0",
-    "electron": "28.0.0"
+    "electron": "28.0.0",
+    "zustand": "^5.0.11"
   }
 }
