--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "test": "node --test tests/*.test.js"
   },
   "dependencies": {
     "axios": "1.6.0",
     "electron": "28.0.0",
+    "node-llama-cpp": "^3.0.0",
     "zustand": "^5.0.11"
   }
 }
